@@ -85,9 +85,33 @@ static GUI_MENU_ENTRY UNUSED_VARIABLE gui_query_confirm[] = {
 };
 static GUI_MENU_ENTRY UNUSED_VARIABLE gui_query_save[] = {
 	{ MI_TITLE },
-	{ MI_STANDARD, "\aSAVE", NULL, SDLK_s, NULL, NULL, NULL, true, true, GUI_QUERY_SAVE },
 	{ MI_STANDARD, "DO\aN'T SAVE", NULL, SDLK_n, NULL, NULL, NULL, true, true, GUI_QUERY_DONTSAVE },
+	{ MI_STANDARD, "\aSAVE", NULL, SDLK_s, NULL, NULL, NULL, true, true, GUI_QUERY_SAVE },
 	{ MI_STANDARD, "\aCANCEL", NULL, SDLK_c, NULL, NULL, NULL, true, true, GUI_QUERY_CANCEL },
+	{ MENU_END }
+};
+static GUI_MENU_ENTRY UNUSED_VARIABLE gui_tapebrowser_popup[] = {
+	{ MI_TITLE, "TAPE BLOCK OPTIONS" },
+	{ MI_STANDARD, "SET \aCURSOR", "SPACE", SDLK_c, NULL, NULL, NULL, true },
+	{ MI_STANDARD, "SET \aSTOP-CURSOR", "^END", SDLK_s, NULL, NULL, NULL, true },
+	{ MI_SEPARATOR },
+	{ MI_STANDARD, "SELECT \aBLOCK", "INS", SDLK_b, NULL, NULL, NULL, true },
+	{ MI_SEPARATOR },
+	{ MI_STANDARD, "MOVE BLOCK \aUP", "^\201", SDLK_u, NULL, NULL, NULL, true },
+	{ MI_STANDARD, "MOVE BLOCK \aDOWN", "^\202", SDLK_d, NULL, NULL, NULL, true },
+	{ MI_STANDARD, "D\aELETE BLOCK(S)", "DEL", SDLK_e, NULL, NULL, NULL, true },
+	{ MI_SEPARATOR },
+	{ MI_DIALOG, "EDIT \aHEADER", "TAB", SDLK_h, NULL, NULL, NULL, true },
+	{ MI_DIALOG, "CHA\aNGE BLOCK", NULL, SDLK_n, NULL, NULL, NULL, true },
+	{ MI_STANDARD, "\aFIX HEADER CRC", NULL, SDLK_f, NULL, NULL, NULL, true },
+	{ MI_SEPARATOR },
+	{ MI_DIALOG, "IMPORT \aTAPE", NULL, SDLK_t, NULL, NULL, NULL, true },
+	{ MI_DIALOG, "\aIMPORT RAW DATA", NULL, SDLK_i, NULL, NULL, NULL, true },
+	{ MI_SEPARATOR },
+	{ MI_DIALOG, "E\aXPORT TO TAPE", NULL, SDLK_x, NULL, NULL, NULL, true },
+	{ MI_DIALOG, "EXPORT \aRAW DATA", NULL, SDLK_r, NULL, NULL, NULL, true },
+	{ MI_SEPARATOR },
+	{ MI_STANDARD, "LEGEND", "F1", SDLK_F1, NULL, NULL, NULL, true },
 	{ MENU_END }
 };
 static GUI_MENU_ENTRY gui_p32_images_menu[] = {
